--- a/hawc/apps/lit/templates/lit/fragments/workflow_edit_row.html
+++ b/hawc/apps/lit/templates/lit/fragments/workflow_edit_row.html
@@ -12,6 +12,7 @@
                         <i class="fa fa-fw fa-exclamation-triangle"></i>&nbsp;Are you sure you want to delete?
                         <div class="d-flex pl-2">
                             <button class="btn btn-sm btn-danger"
+                                id="workflow-conf-delete"
                                 hx-post="{{ object.get_delete_url }}"
                                 hx-swap="outerHTML swap:1s"><i class="fa fa-trash"></i>&nbsp;Delete</button>
                             <button class="btn btn-sm btn-light ml-2"
@@ -22,6 +23,7 @@
                 {% else %}
                 <button
                 class="btn btn-sm btn-danger ml-auto flex-shrink-0 align-self-start"
+                id="workflow-delete"
                 hx-get="{{ object.get_delete_url }}">
                 <i class="fa fa-fw fa-trash"></i>&nbsp;Delete</button>
                 {% endif %}
@@ -35,6 +37,7 @@
                 <i class="fa fa-spinner fa-spin htmx-indicator ml-3" id="spinner-{{object.pk}}" aria-hidden="true"></i>
                 {% if form.instance.id %}
                 <button class="btn btn-primary ml-2"
+                    id="workflow-update"
                     hx-post="{% url 'lit:workflow-update' object.pk %}"
                     hx-indicator="#spinner-{{object.pk}}"
                     hx-encoding="multipart/form-data"
@@ -43,6 +46,7 @@
                     Update
                 </button>
                 <button class="btn btn-light"
+                    id="workflow-cancel"
                     hx-get="{% url 'lit:workflow-detail' object.pk %}"
                     hx-indicator="#spinner-{{object.pk}}"
                     style="width: 10rem; height: 2rem;">
@@ -50,6 +54,7 @@
                 </button>
                 {% else %}
                 <button class="btn btn-primary ml-2"
+                    id="workflow-create"
                     hx-post="{% url 'lit:workflow-create' assessment.pk %}"
                     hx-indicator="#spinner-{{object.pk}}"
                     hx-encoding="multipart/form-data"
@@ -57,6 +62,7 @@
                     <i class="fa fa-fw fa-save"></i>&nbsp;Create
                 </button>
                 <button class="btn btn-light"
+                    id="workflow-cancel"
                     type='button'
                     onclick="$(this).closest('.workflow-edit-row').remove()"
                     style="width: 10rem; height: 2rem;">
