--- a/hawc/templates/includes/_navigation_links.html
+++ b/hawc/templates/includes/_navigation_links.html
@@ -8,7 +8,7 @@
 <li class="nav-item">
     <a class="nav-link" href="{% url 'resources' %}">Resources</a>
 </li>
-{% if user.is_authenticated %}
+{% if feature_flags.ENABLE_DOCS_LINK and user.is_authenticated %}
 <li class="nav-item">
     <a class="nav-link" href="{% url 'wagtail_serve' '' %}">Documentation</a>
 </li>
