Add wagtail and internal documentation application (#950)
* add wagtail to hawc

* add models and default templates from tutorial

* added redirect if user not logged in

* add migration for docs page

* moved '/docs/cms' to '/admin/cms'

* add initial tests for permissions

* added 'Docs' navbar link

* installed draftail anchors package

* Template and model changes

* formatting

* added link in admin/base.html and started docs

* added hook to make page private after creation

* add wagtail models to yaml

* Update sidebar template for doc links

* update wagtail tests

* fix content type

* added hooks that set to private after save and publish

* set WAGTAILADMIN_BASE_URL to empty string

* combined after_edit and after_publish hooks

* disable all wagtail signals on fixture load

* Consolidate models, remove confusing function, move some doc templates to 'components'

* Added wagtail user bar for staff

* Squashed migrations, added default homepage for docs

* change docsindex to docspage

* add permissions to yaml

* add required auth.permission and auth.group

* re-add content types

* remove duplicate db.yaml content

* update migration

* move documentation navigation

* updates

* update migration and fix tests

* add anchor links

* updates from multi user testing

* optimize page cache

* add clear_cache option in admin

* restrict wagtail admin

* make base url configurable via admin setting

* add id to toc so it'll have a anchor link too

* bump versions

* add a smoother transition

* removed wagtail docs bc no longer needed

* add feature flag `ENABLE_DOCS_SIDEBAR`

* fix loading test database outside of pytest

* enable docs links by default in dev; rename variable

* update docs

---------

Co-authored-by: Danny Peterson <dannypeterson28@gmail.com>
Co-authored-by: Daniel Rabstejnek <rabstejnek@gmail.com>
Co-authored-by: Andy Shapiro <shapiromatron@gma

--- a/hawc/templates/includes/_navigation_links.html
+++ b/hawc/templates/includes/_navigation_links.html
@@ -8,6 +8,11 @@
 <li class="nav-item">
     <a class="nav-link" href="{% url 'resources' %}">Resources</a>
 </li>
+{% if feature_flags.ENABLE_DOCS_LINK and user.is_authenticated %}
+<li class="nav-item">
+    <a class="nav-link" href="{% url 'wagtail_serve' '' %}">Documentation</a>
+</li>
+{% endif %}
 <li class="nav-item">
     <a class="nav-link" href="{% url 'assessment:public_list' %}">Public Assessments</a>
 </li>
