--- a/hawc/apps/assessment/templates/assessment/assessment_downloads.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_downloads.html
@@ -20,12 +20,12 @@
           {% else %}
           <li class="list-group-item">
             {% url 'lit:api:assessment-reference-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='references' button_text="Reference Export" help_text="All references and tags." %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='references' button_text="Reference Export" help_text="All references and tags." allow_unpublished=False %}
           </li>
           {% if obj_perms.edit and assessment.literature_settings.conflict_resolution %}
           <li class="list-group-item">
             {% url 'lit:api:assessment-user-tag-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='references-usertags' button_text='User Tag Reference Export' help_text="All references and tags, including user tags. Team members only." %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='references-usertags' button_text='User Tag Reference Export' help_text="All references and tags, including user tags. Team members only." allow_unpublished=False %}
           </li>
           {% endif %}
           {% endif %}
@@ -45,12 +45,12 @@
           {% else %}
           <li class="list-group-item">
             {% url 'riskofbias:api:assessment-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='rob-final' button_text=assessment.get_rob_name_display|title|add:' Export' help_text="All final reviews." %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='rob-final' button_text=assessment.get_rob_name_display|title|add:' Export' help_text="All final reviews." allow_unpublished=False %}
           </li>
           {% if obj_perms.edit %}
           <li class="list-group-item">
             {% url 'riskofbias:api:assessment-full-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='rob-all' button_text='Complete '|add:assessment.get_rob_name_display|title|add:' Export' help_text="All reviews, including individual reviews. Team members only." %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='rob-all' button_text='Complete '|add:assessment.get_rob_name_display|title|add:' Export' help_text="All reviews, including individual reviews. Team members only." allow_unpublished=False %}
           </li>
           {% endif %}
           {% endif %}
@@ -132,7 +132,7 @@
             <p class="text-muted">No data available.</p>
             {% else %}
             {% url 'meta:api:assessment-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epimeta-data' button_text='Complete Export' help_text="All epidemiology meta-analysis data." %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epimeta-data' button_text='Complete Export' help_text="All epidemiology meta-analysis data." allow_unpublished=False %}
             {% endif %}
           </li>
         </ul>
@@ -149,7 +149,7 @@
             <p class="text-muted">No data available.</p>
             {% else %}
             {% url 'invitro:api:assessment-full-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='invitro-data' button_text='Complete Export' help_text="All in-vitro data." %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='invitro-data' button_text='Complete Export' help_text="All in-vitro data." allow_unpublished=False %}
             {% endif %}
           </li>
         </ul>
@@ -171,11 +171,11 @@
           {% else %}
           <li class="list-group-item">
             {% url 'eco:api:assessment-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='eco-data' button_text='Complete Export' help_text="All ecological data." %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='eco-data' button_text='Complete Export' help_text="All ecological data." allow_unpublished=False %}
           </li>
           <li class="list-group-item">
             {% url 'eco:api:assessment-study-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='eco-study-summary' button_text='Study Summary' help_text="Ecology study summary data." %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='eco-study-summary' button_text='Study Summary' help_text="Ecology study summary data." allow_unpublished=False %}
           </li>
           {% endif %}
           </li>
