--- a/hawc/apps/assessment/templates/assessment/assessment_downloads.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_downloads.html
@@ -171,11 +171,11 @@
           {% else %}
           <li class="list-group-item">
             {% url 'eco:api:assessment-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='eco-data' button_text='Complete Export' help_text="All ecological data." allow_unpublished=False %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='eco-data' button_text='Complete Export' help_text="All ecological data." %}
           </li>
           <li class="list-group-item">
             {% url 'eco:api:assessment-study-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='eco-study-summary' button_text='Study Summary' help_text="Ecology study summary data." allow_unpublished=False %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='eco-study-summary' button_text='Study Summary' help_text="Ecology study summary data." %}
           </li>
           {% endif %}
           </li>
