tagging noop, css update

--- a/hawc/apps/lit/templates/lit/overview.html
+++ b/hawc/apps/lit/templates/lit/overview.html
@@ -136,7 +136,7 @@
               {% if show_conflicts and show_tags %}
                 <div class="lit-review-box box-shadow w-30 d-flex flex-column justify-content-between py-0" style="padding-bottom: 8px">
                   <div class="d-flex row justify-content-between flex-grow-1">
-                      <a class="pl-3 pb-1 clickable w-50 box-shadow-2 border-right border-bottom" 
+                      <a class="pl-3 pb-1 clickable w-50 box-shadow-minor border-right border-bottom" 
                         {% if assessment.literature_settings.conflict_resolution %}
                         href="{% url 'lit:tag' assessment.pk %}?needs_tagging=on&workflow={{workflow.id}}&my_tags=untagged" 
                         {% else %}
@@ -149,7 +149,7 @@
                         </div>
                         <p class="m-0 small text-black">need{{ workflow.needs_tagging|pluralize:"s," }} tagging&nbsp;</p>
                       </a>
-                    <a class="pr-3 pb-1 clickable w-50 text-right box-shadow-2 border-left border-bottom" href="{% url 'lit:tag-conflicts' assessment.pk %}?workflow={{workflow.id}}" style="padding-top: 12px;">
+                    <a class="pr-3 pb-1 clickable w-50 text-right box-shadow-minor border-left border-bottom" href="{% url 'lit:tag-conflicts' assessment.pk %}?workflow={{workflow.id}}" style="padding-top: 12px;">
                       <div class="d-flex flex-row-reverse pl-0">
                         <p class="h3 m-0 text-black">{{workflow.conflicts}}</p>
                         <div class="lit-icon px-2 text-black"><div class="icon-bg" style="color: white; background-color: #ff9393; height: 25px; width: 25px; font-size: 1.2em; border-radius: 5px;">&#8800;</div></div>
