--- a/hawc/static/css/epa/core/style.css
+++ b/hawc/static/css/epa/core/style.css
@@ -102,7 +102,7 @@ li:last-child {
   font-style: normal;
   font-weight: 300;
   font-display: fallback;
-  src: url(../fonts/roboto-mono/roboto-mono-v5-latin-300.woff2) format("woff2"), url(../fonts/roboto-mono/roboto-mono-v5-latin-300.woff) format("woff"), url(../fonts/roboto-mono/roboto-mono-v5-latin-300.ttf) format("truetype")
+  src: url(//www.epa.gov/themes/epa_theme/fonts/roboto-mono/roboto-mono-v5-latin-300.woff2) format("woff2"), url(//www.epa.gov/themes/epa_theme/fonts/roboto-mono/roboto-mono-v5-latin-300.woff) format("woff"), url(//www.epa.gov/themes/epa_theme/fonts/roboto-mono/roboto-mono-v5-latin-300.ttf) format("truetype")
 }
 
 @font-face {
@@ -110,7 +110,7 @@ li:last-child {
   font-style: normal;
   font-weight: 400;
   font-display: fallback;
-  src: url(../fonts/roboto-mono/roboto-mono-v5-latin-regular.woff2) format("woff2"), url(../fonts/roboto-mono/roboto-mono-v5-latin-regular.woff) format("woff"), url(../fonts/roboto-mono/roboto-mono-v5-latin-regular.ttf) format("truetype")
+  src: url(//www.epa.gov/themes/epa_theme/fonts/roboto-mono/roboto-mono-v5-latin-regular.woff2) format("woff2"), url(//www.epa.gov/themes/epa_theme/fonts/roboto-mono/roboto-mono-v5-latin-regular.woff) format("woff"), url(//www.epa.gov/themes/epa_theme/fonts/roboto-mono/roboto-mono-v5-latin-regular.ttf) format("truetype")
 }
 
 @font-face {
@@ -118,7 +118,7 @@ li:last-child {
   font-style: normal;
   font-weight: 700;
   font-display: fallback;
-  src: url(../fonts/roboto-mono/roboto-mono-v5-latin-700.woff2) format("woff2"), url(../fonts/roboto-mono/roboto-mono-v5-latin-700.woff) format("woff"), url(../fonts/roboto-mono/roboto-mono-v5-latin-700.ttf) format("truetype")
+  src: url(//www.epa.gov/themes/epa_theme/fonts/roboto-mono/roboto-mono-v5-latin-700.woff2) format("woff2"), url(//www.epa.gov/themes/epa_theme/fonts/roboto-mono/roboto-mono-v5-latin-700.woff) format("woff"), url(//www.epa.gov/themes/epa_theme/fonts/roboto-mono/roboto-mono-v5-latin-700.ttf) format("truetype")
 }
 
 @font-face {
@@ -126,7 +126,7 @@ li:last-child {
   font-style: italic;
   font-weight: 300;
   font-display: fallback;
-  src: url(../fonts/roboto-mono/roboto-mono-v5-latin-300italic.woff2) format("woff2"), url(../fonts/roboto-mono/roboto-mono-v5-latin-300italic.woff) format("woff"), url(../fonts/roboto-mono/roboto-mono-v5-latin-300italic.ttf) format("truetype")
+  src: url(//www.epa.gov/themes/epa_theme/fonts/roboto-mono/roboto-mono-v5-latin-300italic.woff2) format("woff2"), url(//www.epa.gov/themes/epa_theme/fonts/roboto-mono/roboto-mono-v5-latin-300italic.woff) format("woff"), url(//www.epa.gov/themes/epa_theme/fonts/roboto-mono/roboto-mono-v5-latin-300italic.ttf) format("truetype")
 }
 
 @font-face {
@@ -134,7 +134,7 @@ li:last-child {
   font-style: italic;
   font-weight: 400;
   font-display: fallback;
-  src: url(../fonts/roboto-mono/roboto-mono-v5-latin-italic.woff2) format("woff2"), url(../fonts/roboto-mono/roboto-mono-v5-latin-italic.woff) format("woff"), url(../fonts/roboto-mono/roboto-mono-v5-latin-italic.ttf) format("truetype")
+  src: url(//www.epa.gov/themes/epa_theme/fonts/roboto-mono/roboto-mono-v5-latin-italic.woff2) format("woff2"), url(//www.epa.gov/themes/epa_theme/fonts/roboto-mono/roboto-mono-v5-latin-italic.woff) format("woff"), url(//www.epa.gov/themes/epa_theme/fonts/roboto-mono/roboto-mono-v5-latin-italic.ttf) format("truetype")
 }
 
 @font-face {
@@ -142,7 +142,7 @@ li:last-child {
   font-style: italic;
   font-weight: 700;
   font-display: fallback;
-  src: url(../fonts/roboto-mono/roboto-mono-v5-latin-700italic.woff2) format("woff2"), url(../fonts/roboto-mono/roboto-mono-v5-latin-700italic.woff) format("woff"), url(../fonts/roboto-mono/roboto-mono-v5-latin-700italic.ttf) format("truetype")
+  src: url(//www.epa.gov/themes/epa_theme/fonts/roboto-mono/roboto-mono-v5-latin-700italic.woff2) format("woff2"), url(//www.epa.gov/themes/epa_theme/fonts/roboto-mono/roboto-mono-v5-latin-700italic.woff) format("woff"), url(//www.epa.gov/themes/epa_theme/fonts/roboto-mono/roboto-mono-v5-latin-700italic.ttf) format("truetype")
 }
 
 @font-face {
@@ -150,7 +150,7 @@ li:last-child {
   font-style: normal;
   font-weight: 300;
   font-display: fallback;
-  src: url(../fonts/source-sans-pro/sourcesanspro-light-webfont.woff2) format("woff2"), url(../fonts/source-sans-pro/sourcesanspro-light-webfont.woff) format("woff"), url(../fonts/source-sans-pro/sourcesanspro-light-webfont.ttf) format("truetype")
+  src: url(//www.epa.gov/themes/epa_theme/fonts/source-sans-pro/sourcesanspro-light-webfont.woff2) format("woff2"), url(//www.epa.gov/themes/epa_theme/fonts/source-sans-pro/sourcesanspro-light-webfont.woff) format("woff"), url(//www.epa.gov/themes/epa_theme/fonts/source-sans-pro/sourcesanspro-light-webfont.ttf) format("truetype")
 }
 
 @font-face {
@@ -158,7 +158,7 @@ li:last-child {
   font-style: normal;
   font-weight: 400;
   font-display: fallback;
-  src: url(../fonts/source-sans-pro/sourcesanspro-regular-webfont.woff2) format("woff2"), url(../fonts/source-sans-pro/sourcesanspro-regular-webfont.woff) format("woff"), url(../fonts/source-sans-pro/sourcesanspro-regular-webfont.ttf) format("truetype")
+  src: url(//www.epa.gov/themes/epa_theme/fonts/source-sans-pro/sourcesanspro-regular-webfont.woff2) format("woff2"), url(//www.epa.gov/themes/epa_theme/fonts/source-sans-pro/sourcesanspro-regular-webfont.woff) format("woff"), url(//www.epa.gov/themes/epa_theme/fonts/source-sans-pro/sourcesanspro-regular-webfont.ttf) format("truetype")
 }
 
 @font-face {
@@ -166,7 +166,7 @@ li:last-child {
   font-style: normal;
   font-weight: 700;
   font-display: fallback;
-  src: url(../fonts/source-sans-pro/sourcesanspro-bold-webfont.woff2) format("woff2"), url(../fonts/source-sans-pro/sourcesanspro-bold-webfont.woff) format("woff"), url(../fonts/source-sans-pro/sourcesanspro-bold-webfont.ttf) format("truetype")
+  src: url(//www.epa.gov/themes/epa_theme/fonts/source-sans-pro/sourcesanspro-bold-webfont.woff2) format("woff2"), url(//www.epa.gov/themes/epa_theme/fonts/source-sans-pro/sourcesanspro-bold-webfont.woff) format("woff"), url(//www.epa.gov/themes/epa_theme/fonts/source-sans-pro/sourcesanspro-bold-webfont.ttf) format("truetype")
 }
 
 @font-face {
@@ -174,7 +174,7 @@ li:last-child {
   font-style: italic;
   font-weight: 300;
   font-display: fallback;
-  src: url(../fonts/source-sans-pro/sourcesanspro-lightitalic-webfont.woff2) format("woff2"), url(../fonts/source-sans-pro/sourcesanspro-lightitalic-webfont.woff) format("woff"), url(../fonts/source-sans-pro/sourcesanspro-lightitalic-webfont.ttf) format("truetype")
+  src: url(//www.epa.gov/themes/epa_theme/fonts/source-sans-pro/sourcesanspro-lightitalic-webfont.woff2) format("woff2"), url(//www.epa.gov/themes/epa_theme/fonts/source-sans-pro/sourcesanspro-lightitalic-webfont.woff) format("woff"), url(//www.epa.gov/themes/epa_theme/fonts/source-sans-pro/sourcesanspro-lightitalic-webfont.ttf) format("truetype")
 }
 
 @font-face {
@@ -182,7 +182,7 @@ li:last-child {
   font-style: italic;
   font-weight: 400;
   font-display: fallback;
-  src: url(../fonts/source-sans-pro/sourcesanspro-italic-webfont.woff2) format("woff2"), url(../fonts/source-sans-pro/sourcesanspro-italic-webfont.woff) format("woff"), url(../fonts/source-sans-pro/sourcesanspro-italic-webfont.ttf) format("truetype")
+  src: url(//www.epa.gov/themes/epa_theme/fonts/source-sans-pro/sourcesanspro-italic-webfont.woff2) format("woff2"), url(//www.epa.gov/themes/epa_theme/fonts/source-sans-pro/sourcesanspro-italic-webfont.woff) format("woff"), url(//www.epa.gov/themes/epa_theme/fonts/source-sans-pro/sourcesanspro-italic-webfont.ttf) format("truetype")
 }
 
 @font-face {
@@ -190,7 +190,7 @@ li:last-child {
   font-style: italic;
   font-weight: 700;
   font-display: fallback;
-  src: url(../fonts/source-sans-pro/sourcesanspro-bolditalic-webfont.woff2) format("woff2"), url(../fonts/source-sans-pro/sourcesanspro-bolditalic-webfont.woff) format("woff"), url(../fonts/source-sans-pro/sourcesanspro-bolditalic-webfont.ttf) format("truetype")
+  src: url(//www.epa.gov/themes/epa_theme/fonts/source-sans-pro/sourcesanspro-bolditalic-webfont.woff2) format("woff2"), url(//www.epa.gov/themes/epa_theme/fonts/source-sans-pro/sourcesanspro-bolditalic-webfont.woff) format("woff"), url(//www.epa.gov/themes/epa_theme/fonts/source-sans-pro/sourcesanspro-bolditalic-webfont.ttf) format("truetype")
 }
 
 @font-face {
@@ -198,7 +198,7 @@ li:last-child {
   font-style: normal;
   font-weight: 300;
   font-display: fallback;
-  src: url(../fonts/merriweather/Latin-Merriweather-Light.woff2) format("woff2"), url(../fonts/merriweather/Latin-Merriweather-Light.woff) format("woff"), url(../fonts/merriweather/Latin-Merriweather-Light.ttf) format("truetype")
+  src: url(//www.epa.gov/themes/epa_theme/fonts/merriweather/Latin-Merriweather-Light.woff2) format("woff2"), url(//www.epa.gov/themes/epa_theme/fonts/merriweather/Latin-Merriweather-Light.woff) format("woff"), url(//www.epa.gov/themes/epa_theme/fonts/merriweather/Latin-Merriweather-Light.ttf) format("truetype")
 }
 
 @font-face {
@@ -206,7 +206,7 @@ li:last-child {
   font-style: normal;
   font-weight: 400;
   font-display: fallback;
-  src: url(../fonts/merriweather/Latin-Merriweather-Regular.woff2) format("woff2"), url(../fonts/merriweather/Latin-Merriweather-Regular.woff) format("woff"), url(../fonts/merriweather/Latin-Merriweather-Regular.ttf) format("truetype")
+  src: url(//www.epa.gov/themes/epa_theme/fonts/merriweather/Latin-Merriweather-Regular.woff2) format("woff2"), url(//www.epa.gov/themes/epa_theme/fonts/merriweather/Latin-Merriweather-Regular.woff) format("woff"), url(//www.epa.gov/themes/epa_theme/fonts/merriweather/Latin-Merriweather-Regular.ttf) format("truetype")
 }
 
 @font-face {
@@ -214,7 +214,7 @@ li:last-child {
   font-style: normal;
   font-weight: 700;
   font-display: fallback;
-  src: url(../fonts/merriweather/Latin-Merriweather-Bold.woff2) format("woff2"), url(../fonts/merriweather/Latin-Merriweather-Bold.woff) format("woff"), url(../fonts/merriweather/Latin-Merriweather-Bold.ttf) format("truetype")
+  src: url(//www.epa.gov/themes/epa_theme/fonts/merriweather/Latin-Merriweather-Bold.woff2) format("woff2"), url(//www.epa.gov/themes/epa_theme/fonts/merriweather/Latin-Merriweather-Bold.woff) format("woff"), url(//www.epa.gov/themes/epa_theme/fonts/merriweather/Latin-Merriweather-Bold.ttf) format("truetype")
 }
 
 @font-face {
@@ -222,7 +222,7 @@ li:last-child {
   font-style: italic;
   font-weight: 300;
   font-display: fallback;
-  src: url(../fonts/merriweather/Latin-Merriweather-LightItalic.woff2) format("woff2"), url(../fonts/merriweather/Latin-Merriweather-LightItalic.woff) format("woff"), url(../fonts/merriweather/Latin-Merriweather-LightItalic.ttf) format("truetype")
+  src: url(//www.epa.gov/themes/epa_theme/fonts/merriweather/Latin-Merriweather-LightItalic.woff2) format("woff2"), url(//www.epa.gov/themes/epa_theme/fonts/merriweather/Latin-Merriweather-LightItalic.woff) format("woff"), url(//www.epa.gov/themes/epa_theme/fonts/merriweather/Latin-Merriweather-LightItalic.ttf) format("truetype")
 }
 
 @font-face {
@@ -230,7 +230,7 @@ li:last-child {
   font-style: italic;
   font-weight: 400;
   font-display: fallback;
-  src: url(../fonts/merriweather/Latin-Merriweather-Italic.woff2) format("woff2"), url(../fonts/merriweather/Latin-Merriweather-Italic.woff) format("woff"), url(../fonts/merriweather/Latin-Merriweather-Italic.ttf) format("truetype")
+  src: url(//www.epa.gov/themes/epa_theme/fonts/merriweather/Latin-Merriweather-Italic.woff2) format("woff2"), url(//www.epa.gov/themes/epa_theme/fonts/merriweather/Latin-Merriweather-Italic.woff) format("woff"), url(//www.epa.gov/themes/epa_theme/fonts/merriweather/Latin-Merriweather-Italic.ttf) format("truetype")
 }
 
 @font-face {
@@ -238,7 +238,7 @@ li:last-child {
   font-style: italic;
   font-weight: 700;
   font-display: fallback;
-  src: url(../fonts/merriweather/Latin-Merriweather-BoldItalic.woff2) format("woff2"), url(../fonts/merriweather/Latin-Merriweather-BoldItalic.woff) format("woff"), url(../fonts/merriweather/Latin-Merriweather-BoldItalic.ttf) format("truetype")
+  src: url(//www.epa.gov/themes/epa_theme/fonts/merriweather/Latin-Merriweather-BoldItalic.woff2) format("woff2"), url(//www.epa.gov/themes/epa_theme/fonts/merriweather/Latin-Merriweather-BoldItalic.woff) format("woff"), url(//www.epa.gov/themes/epa_theme/fonts/merriweather/Latin-Merriweather-BoldItalic.ttf) format("truetype")
 }
 
 .usa-button,
