add focus to delete prompt

--- a/hawc/templates/hawc/_delete_block.html
+++ b/hawc/templates/hawc/_delete_block.html
@@ -20,6 +20,7 @@
 {% if confirm %}
 <script>
   window.addEventListener('load', function () {
+    $("#confirmationText").focus();
     $('#confirmationText').on('keyup', function(){
       if (this.value === "delete") {
         $('#deleteConfirmationActionsDiv').removeClass('hidden');
