add back rob reviews to user dashboard pages

--- a/hawc/apps/mgmt/templates/mgmt/user_assessment_task_list.html
+++ b/hawc/apps/mgmt/templates/mgmt/user_assessment_task_list.html
@@ -24,4 +24,10 @@
 {% else %}
 <p><i>There are no tasks available</i></p>
 {% endif %}
+
+{% with rob_name=assessment.get_rob_name_display %}
+<h3>Assigned {{rob_name|title}} Reviews</h3>
+{% include "mgmt/fragments/rob_reviews.html" with show_assessment=False %}
+{% endwith %}
+
 {% endblock %}
