--- a/hawc/templates/includes/_navigation_links.html
+++ b/hawc/templates/includes/_navigation_links.html
@@ -2,12 +2,14 @@
     <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
 </li>
 {% if not contact_only %}
+{% if feature_flags.ENABLE_DOCS_LINK and not user.is_authenticated %}
 <li class="nav-item">
     <a class="nav-link" href="{% url 'about' %}">About</a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href="{% url 'resources' %}">Resources</a>
 </li>
+{% endif %}
 {% if feature_flags.ENABLE_DOCS_LINK and user.is_authenticated %}
 <li class="nav-item">
     <a class="nav-link" href="{% url 'wagtail_serve' '' %}">Documentation</a>
