--- a/hawc/apps/mgmt/templates/mgmt/user_task_list.html
+++ b/hawc/apps/mgmt/templates/mgmt/user_task_list.html
@@ -32,7 +32,7 @@
 {% endif %}
 
 {% with rob_name=assessment.get_rob_name_display %}
-<h3>Assigned Study Evaluation/Risk of Bias Reviews</h3>
+<h3 class="mb-3">Assigned Study Evaluation/Risk of Bias Reviews</h3>
 {% include "mgmt/fragments/rob_reviews.html" with show_assessment=True %}
 {% endwith %}
 
