--- a/hawc/templates/includes/_navigation_links.html
+++ b/hawc/templates/includes/_navigation_links.html
@@ -37,7 +37,7 @@
         <div class="dropdown-divider"></div>
         <form class="dropdown-item" method="post" action="{% url 'user:logout' %}">
             {% csrf_token %}
-            <button class="unstyled-action-button" type="submit">Logout</button>
+            <button class="unstyled-action-button logout-btn" type="submit">Logout</button>
         </form>
     </div>
 </li>
