add new visual - user uploaded image (#941)
* add draft summary visual

* add description to selector

* wip

* fix tests

* relax image boundaries; fix slow test

* fix existing tests

* add integration test

* Review changes

* add evidence type

* unrelated - fix wagtail migration

* fix visual migration order post-main merge

---------

Co-authored-by: munnsmunns <mmunns16@gmail.com>
Co-authored-by: Daniel Rabstejnek <rabstejnek@gmail.com>

--- a/hawc/apps/summary/templates/summary/visual_detail_image.html
+++ b/hawc/apps/summary/templates/summary/visual_detail_image.html
@@ -1,4 +1,5 @@
 {% extends 'assessment-rooted.html' %}
+{% load static %}
 
 {% block content %}
 <div class="visualization">
@@ -13,7 +14,9 @@
       {% endactions %}
     {% endif %}
   </div>
-  {% plotly object.get_plotly_from_json %}
+  <div id="visual-image">
+    <img src="{{object.image.url}}" style="max-width: 100%" />
+  </div>
   <p>{{object.caption|safe}}</p>
 </div>
 {% endblock %}
