--- a/hawc/apps/animal/templates/animal/animalgroup_detail.html
+++ b/hawc/apps/animal/templates/animal/animalgroup_detail.html
@@ -7,14 +7,14 @@
       {% actions %}
         <span class="dropdown-header">Animal Group Editing</span>
         <a class="dropdown-item" href="{% url 'animal:animal_group_update' object.pk %}">Update</a>
-        <a class="dropdown-item" href="{% audit_url object %}">Change logs</a>
+        <a class="dropdown-item" href="{% audit_url object %}">View change logs</a>
         <a class="dropdown-item" href="{% url 'animal:animal_group_delete' object.pk %}">Delete</a>
 
         {% if object.dosing_regime and object == object.dosing_regime.dosed_animals %}
         <div class="dropdown-divider"></div>
         <span class="dropdown-header">Dose Regime Editing</span>
         <a class="dropdown-item" href="{% url 'animal:dosing_regime_update' object.dosing_regime.pk %}">Update</a>
-        <a class="dropdown-item" href="{% audit_url object.dosing_regime %}">Change logs</a>
+        <a class="dropdown-item" href="{% audit_url object.dosing_regime %}">View change logs</a>
         {% endif %}
 
         <div class="dropdown-divider"></div>
