--- a/hawc/apps/animal/templates/animal/endpoint_detail.html
+++ b/hawc/apps/animal/templates/animal/endpoint_detail.html
@@ -9,7 +9,7 @@
       {% actions %}
           <span class="dropdown-header">Endpoint Editing</span>
           <a class="dropdown-item" href="{{ object.get_update_url }}">Update endpoint</a>
-          <a class="dropdown-item" href="{% audit_url object %}">Change logs</a>
+          <a class="dropdown-item" href="{% audit_url object %}">View change logs</a>
           <a class="dropdown-item" href="{% url 'animal:endpoint_delete' object.pk %}">Delete endpoint</a>
           {% if assessment.enable_bmd and object.bmd_modeling_possible %}
             {% if bmd_session or assessment.bmd_settings.can_create_sessions %}
