--- a/hawc/apps/assessment/templates/assessment/fragments/downloads_select.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/downloads_select.html
@@ -1,10 +1,6 @@
 <div class="input-group my-2" style="width: fit-content;" role="group" aria-label="Downlink link button group with format select">
     <div class="input-group-prepend">
-    {% if allow_unpublished %}
-        <a class="btn btn-primary" style="line-height: 1.5rem;" type="button" id="{{name}}-url" href="{{link}}?format={{format}}?unpublished=false"><i class="fa fa-download" aria-hidden="true"></i>&nbsp;{{button_text}}</a>
-    {% else %}
-        <a class="btn btn-primary" style="line-height: 1.5rem;" type="button" id="{{name}}-url" href="{{link}}?format={{format}}"><i class="fa fa-download" aria-hidden="true"></i>&nbsp;{{button_text}}</a>
-    {% endif %}
+        <a class="btn btn-primary" style="line-height: 1.5rem;" type="button" id="{{name}}-url" href="{{link}}?format={{format}}&unpublished=false"><i class="fa fa-download" aria-hidden="true"></i>&nbsp;{{button_text}}</a>
     </div>
     <select id="{{name}}" class="custom-select" required>
         <option selected value="xlsx">xlsx</option>
@@ -16,7 +12,7 @@
 </div>
 {% if allow_unpublished %}
 <div class="form-check">
-    <input class="form-check-input unpublished-checkbox" type="checkbox" value="" id="{{name}}-checkbox" data-url="{{name}}-url">
+    <input class="form-check-input unpublished-checkbox" type="checkbox" data-url="{{name}}-url">
     <label class="form-check-label" for="{{name}}-checkbox">
         Include unpublished data
     </label>
